--- a/app/src/main/res/layout/activity_register_invite_code.xml
+++ b/app/src/main/res/layout/activity_register_invite_code.xml
@@ -21,7 +21,7 @@
         android:layout_height="52dp"
         android:layout_marginTop="15dp"
         android:background="@null"
-        android:inputType="number"
+        android:inputType="text"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
