--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -23,6 +23,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/avatar"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:elevation="5dp"
