--- a/app/src/main/res/layout/fragment_mine_preview.xml
+++ b/app/src/main/res/layout/fragment_mine_preview.xml
@@ -151,7 +151,7 @@
                             android:background="@mipmap/icon_school_2" />
 
                         <TextView
-                            android:id="@+id/tv_school"
+                            android:id="@+id/tv_job"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
